# TTG-Device-X-Ray

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  techguy-build.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: apple-known-good-route-reference.md  candidate-bundle-v2.md  mtk-meta-helper-contract.md  release-gates.md  service-mode-helper-contract.md
packaging/windows/: RUN_XRAY_FOR_TTG_UNLOCK.bat  build_exe.ps1  ttg_xray_gui.py
scripts/: check_public_privacy.py  check_read_only.py  run_local_checks.py  validate_distribution.py  validate_fixtures.py  validate_profiles.py  verify_release_version.py
src/ttg_device_xray/: __init__.py  bundle_seal.py  candidate_grouping.py  cli.py  command.py  dev_updater.py  enhanced_pipeline.py  github_reporter.py  hunter_bridge.py  models.py  pipeline.py  platform_tools.py  profile_loader.py  qt_app.py  repair_readiness.py
src/ttg_device_xray/analyzers/: __init__.py  ipsw.py
src/ttg_device_xray/profiles/: __init__.py
src/ttg_device_xray/profiles/apple/: a8_a11_gaster_reference.json
src/ttg_device_xray/profiles/transsion/: __init__.py  km7.json
src/ttg_device_xray/profiles/xiaomi/: redmi_sky_parrot.json
src/ttg_device_xray/transports/: __init__.py  adb.py  apple.py  fastboot.py  mtk_meta.py  qualcomm_edl.py  samsung_download.py  service_mode.py  spd.py
tests/: test_adb_storage_evidence.py  test_apple_route_reference.py  test_bundle_seal.py  test_candidate_pipeline.py  test_dev_updater.py  test_fixture_replay.py  test_github_reporter.py  test_github_reporter_candidate_context.py  test_hunter_bridge.py  test_ipsw.py  test_mtk_meta.py  test_parsers.py  test_pipeline.py  test_platform_tools.py  test_profile_routing.py  test_profiles.py  test_repair_readiness.py  test_service_mode_presence.py  test_service_transports.py
tests/fixtures/: mtk_meta_km7.json  qualcomm_edl_sm7250.json  samsung_download_exynos.json  spd_ums9230.json
