[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ttg-device-xray"
version = "0.4.3.dev1"
description = "Read-first device intelligence for Android and Apple repair workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "THETECHGUY DIGITAL SOLUTIONS" }
]
keywords = [
  "android",
  "apple",
  "device-identification",
  "firmware",
  "forensics",
  "repair",
  "unbrick"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Hardware",
  "Topic :: System :: Systems Administration"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.3",
  "ruff>=0.11",
  "twine>=6.0"
]

[project.scripts]
ttg-xray = "ttg_device_xray.cli:main"

[project.urls]
Homepage = "https://github.com/jaydumisuni/TTG-Device-X-Ray"
Issues = "https://github.com/jaydumisuni/TTG-Device-X-Ray/issues"
Repository = "https://github.com/jaydumisuni/TTG-Device-X-Ray"

[tool.hatch.build.targets.wheel]
packages = ["src/ttg_device_xray"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--strict-config", "--strict-markers"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
